@@ -1,5 +1,7 @@
 1.0b9
 -----
+* Prompts in the importer interface are now colorized for easy
+  reading. The default option is always highlighted.
 * Fix crash when autotagging files with no metadata.
 
 1.0b8
